--- a/PoteChanges/PoteChanges.csproj
+++ b/PoteChanges/PoteChanges.csproj
@@ -5,7 +5,7 @@
         <AssemblyName>potepat.potechanges</AssemblyName>
         <RootNamespace>PotePat</RootNamespace>
         <Product>PoteChanges</Product>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
@@ -54,6 +54,23 @@
         </Reference>
     </ItemGroup>
 
+    <!-- Bundle components for thunderstore -->
+    <ItemGroup>
+        <None Update="icon.png">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="README.md">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="CHANGELOG.md">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="manifest.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
+    <!-- Mod assets -->
     <ItemGroup>
         <None Update="assets\fart.mp3">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
